// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi-url-generators-yml > multi-url-generators-yml > docs 1`] = `
{
  "definitionFiles": {},
  "packageMarkerFile": {
    "errors": {
      "GetTokenRequestUnauthorizedError": {
        "docs": "Unauthorized",
        "status-code": 401,
        "type": "unknown",
      },
      "GetUsersRequestNotFoundError": {
        "docs": "User not found",
        "status-code": 404,
        "type": "unknown",
      },
      "GetUsersRequestUnauthorizedError": {
        "docs": "Unauthorized",
        "status-code": 401,
        "type": "unknown",
      },
      "GetUsersUserIdRequestNotFoundError": {
        "docs": "User not found",
        "status-code": 404,
        "type": "unknown",
      },
      "GetUsersUserIdRequestUnauthorizedError": {
        "docs": "Unauthorized",
        "status-code": 401,
        "type": "unknown",
      },
    },
    "service": {
      "auth": false,
      "base-path": "",
      "endpoints": {
        "getAuthenticationToken": {
          "auth": false,
          "display-name": "Get authentication token",
          "docs": "Retrieve an authentication token for the API",
          "errors": [
            "GetTokenRequestUnauthorizedError",
          ],
          "examples": [
            {
              "response": {
                "body": {
                  "accessToken": "accessToken",
                  "expiresIn": 1,
                  "tokenType": "tokenType",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/token",
          "response": {
            "docs": "Successful response",
            "type": "Token",
          },
          "url": "auth",
        },
        "getUserInformation": {
          "auth": false,
          "display-name": "Get user information",
          "docs": "Retrieve detailed information about a specific user",
          "errors": [
            "GetUsersUserIdRequestUnauthorizedError",
            "GetUsersUserIdRequestNotFoundError",
          ],
          "examples": [
            {
              "path-parameters": {
                "userId": "userId",
              },
              "response": {
                "body": {
                  "createdAt": "2024-01-15T09:30:00Z",
                  "email": "email",
                  "id": "id",
                  "username": "username",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/users/{userId}",
          "path-parameters": {
            "userId": "string",
          },
          "response": {
            "docs": "Successful response",
            "type": "User",
          },
          "url": "user",
        },
        "listUsers": {
          "auth": false,
          "display-name": "List Users",
          "docs": "List information about all users",
          "errors": [
            "GetUsersRequestUnauthorizedError",
            "GetUsersRequestNotFoundError",
          ],
          "examples": [
            {
              "response": {
                "body": {
                  "createdAt": "2024-01-15T09:30:00Z",
                  "email": "email",
                  "id": "id",
                  "username": "username",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/users",
          "response": {
            "docs": "Successful response",
            "type": "User",
          },
        },
      },
      "source": {
        "openapi": "multi-url-generators-yml/openapi.yml",
      },
    },
    "types": {
      "Token": {
        "docs": undefined,
        "properties": {
          "accessToken": "optional<string>",
          "expiresIn": "optional<integer>",
          "tokenType": "optional<string>",
        },
        "source": {
          "openapi": "multi-url-generators-yml/openapi.yml",
        },
      },
      "User": {
        "docs": undefined,
        "properties": {
          "createdAt": "optional<datetime>",
          "email": "optional<string>",
          "id": "optional<string>",
          "username": "optional<string>",
        },
        "source": {
          "openapi": "multi-url-generators-yml/openapi.yml",
        },
      },
    },
  },
  "rootApiFile": {
    "default-environment": "Default",
    "default-url": "user",
    "display-name": "User and Token API",
    "environments": {
      "Default": "https://a.com",
      "Production": {
        "urls": {
          "auth": "http://auth.com",
          "user": "http://user.com",
        },
      },
    },
    "error-discrimination": {
      "strategy": "status-code",
    },
    "name": "api",
  },
}
`;

exports[`multi-url-generators-yml > multi-url-generators-yml > simple 1`] = `
{
  "definitionFiles": {},
  "packageMarkerFile": {
    "errors": {
      "NotFoundError": {
        "docs": "User not found",
        "status-code": 404,
        "type": "unknown",
      },
      "UnauthorizedError": {
        "docs": "Unauthorized",
        "status-code": 401,
        "type": "unknown",
      },
    },
    "service": {
      "auth": false,
      "base-path": "",
      "endpoints": {
        "getAuthenticationToken": {
          "auth": false,
          "display-name": "Get authentication token",
          "docs": "Retrieve an authentication token for the API",
          "errors": [
            "UnauthorizedError",
          ],
          "examples": [
            {
              "response": {
                "body": {
                  "accessToken": "accessToken",
                  "expiresIn": 1,
                  "tokenType": "tokenType",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/token",
          "response": {
            "docs": "Successful response",
            "type": "Token",
          },
          "url": "auth",
        },
        "getUserInformation": {
          "auth": false,
          "display-name": "Get user information",
          "docs": "Retrieve detailed information about a specific user",
          "errors": [
            "UnauthorizedError",
            "NotFoundError",
          ],
          "examples": [
            {
              "path-parameters": {
                "userId": "userId",
              },
              "response": {
                "body": {
                  "createdAt": "2024-01-15T09:30:00Z",
                  "email": "email",
                  "id": "id",
                  "username": "username",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/users/{userId}",
          "path-parameters": {
            "userId": "string",
          },
          "response": {
            "docs": "Successful response",
            "type": "User",
          },
          "url": "user",
        },
        "listUsers": {
          "auth": false,
          "display-name": "List Users",
          "docs": "List information about all users",
          "errors": [
            "UnauthorizedError",
            "NotFoundError",
          ],
          "examples": [
            {
              "response": {
                "body": {
                  "createdAt": "2024-01-15T09:30:00Z",
                  "email": "email",
                  "id": "id",
                  "username": "username",
                },
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/users",
          "response": {
            "docs": "Successful response",
            "type": "User",
          },
        },
      },
      "source": {
        "openapi": "multi-url-generators-yml/openapi.yml",
      },
    },
    "types": {
      "Token": {
        "docs": undefined,
        "properties": {
          "accessToken": "optional<string>",
          "expiresIn": "optional<integer>",
          "tokenType": "optional<string>",
        },
        "source": {
          "openapi": "multi-url-generators-yml/openapi.yml",
        },
      },
      "User": {
        "docs": undefined,
        "properties": {
          "createdAt": "optional<datetime>",
          "email": "optional<string>",
          "id": "optional<string>",
          "username": "optional<string>",
        },
        "source": {
          "openapi": "multi-url-generators-yml/openapi.yml",
        },
      },
    },
  },
  "rootApiFile": {
    "default-environment": "Default",
    "default-url": "user",
    "display-name": "User and Token API",
    "environments": {
      "Default": "https://a.com",
      "Production": {
        "urls": {
          "auth": "http://auth.com",
          "user": "http://user.com",
        },
      },
    },
    "error-discrimination": {
      "strategy": "status-code",
    },
    "name": "api",
  },
}
`;
